error_templates/java/test_files/private_access_error/test.txt
template: "Java.PrivateAccessError"
---
Main.java:5: error: privateVariable has private access in AnotherClass
        int value = anotherClass.privateVariable;
                                ^
1 error
===
template: "Java.PrivateAccessError"
---
# PrivateAccessError
This error occurs when you try to access a private variable from another class, which is not allowed.
```
        // Attempting to access a private variable from another class
        int value = anotherClass.privateVariable;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        System.out.println(value);
    }
```
## Steps to fix
### 1. Use a public accessor method
1. To access a private variable from another class, create a public accessor method in `AnotherClass`.
```diff

class AnotherClass {
    private int privateVariable = 10;
+
+     public int getPrivateVariable() {
+         return this.privateVariable;
+     }
+
}

```
2. Then, use this method to get the value.
```diff
        AnotherClass anotherClass = new AnotherClass();
        // Attempting to access a private variable from another class
-         int value = anotherClass.privateVariable;
+         int value = anotherClass.getPrivateVariable();
        System.out.println(value);
    }
```
This way, you respect encapsulation by using a method to access the private variable.

### 2. Make the variable public (not recommended)
If you must access the variable directly, you can make it public, but this is generally not recommended for maintaining encapsulation.
```diff

class AnotherClass {
-     private int privateVariable = 10;
+     public int privateVariable = 10;
}

```
